[metadata]
name = koilerplate
version = 0.1.0
author = Andrew Scholan
author_email = andrew.scholan@scholan.com
description = Helper boilerplate code that is useful in Kaggle competitions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AScholan/koilerplate.git
project_urls =
    Bug Tracker = https://github.com/AScholan/koilerplate/issues
classifiers =
    Framework :: Jupyter
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Utilities
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where = src
